plugins {
    id "architectury-plugin" version "3.4-SNAPSHOT"
    id "dev.architectury.loom" version "1.10-SNAPSHOT" apply false
}

architectury {
    minecraft = rootProject.minecraft_version
}

subprojects {
    apply plugin: "dev.architectury.loom"

    loom {
        silentMojangMappingsLicense()
    }

    dependencies {
        minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
        // The following line declares the mojmap mappings, you may use other mappings as well
        mappings loom.officialMojangMappings()
        // The following line declares the yarn mappings you may select this one as well.
        // mappings "net.fabricmc:yarn:1.19.4+build.2:v2"
    }
}

allprojects {
    apply plugin: "java"
    apply plugin: "architectury-plugin"
    apply plugin: "maven-publish"

    archivesBaseName = rootProject.archives_base_name
    // Final artifact will be: <archivesBaseName>-<version>-<classifier>.jar
    // The MC range is now in archivesBaseName (set per loader subproject) so the
    // fabric.mod.json / mods.toml "version" field stays a plain SemVer "3.0.0".
    // Anything other than a plain "N.N.N" version is parsed by SemVer as a pre-release
    // and ordered LESS than the plain release, breaking dependent mods' ">=3.0.0" deps.
    version = "${rootProject.mod_version}"
    group = rootProject.maven_group

    repositories {
        // Add repositories to retrieve artifacts from in here.
        // You should only use this when depending on other mods because
        // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
        // See https://docs.gradle.org/current/userguide/declaring_repositories.html
        // for more information about repositories.
        maven { url "https://maven.shedaniel.me/" }            // Cloth Config (in-game config screen)
        maven { url "https://maven.terraformersmc.com/releases/" } // Mod Menu
    }

    tasks.withType(JavaCompile) {
        options.encoding = "UTF-8"
        options.release = 17
    }

    java {
        withSourcesJar()
    }
}


def loaderProjectsForCollect = subprojects.findAll { it.name in ['fabric', 'neoforge', 'forge'] && new File(it.projectDir, 'build.gradle').exists() }

tasks.register('collectJars', Copy) {
    loaderProjectsForCollect.each { sub ->
        // Loom-based subprojects expose a "dev" jar (unremapped, classifier "dev") that
        // collides in name across loaders since archivesBaseName only encodes the MC
        // range, not the loader. The actual per-loader release artifact is remapJar
        // (classifier "fabric"/"forge"/"neoforge"), so prefer that when present.
        def releaseTaskName = sub.tasks.findByName('remapJar') ? 'remapJar' : 'jar'
        dependsOn "${sub.path}:${releaseTaskName}"
        from(sub.tasks.named(releaseTaskName).flatMap { it.archiveFile })
    }
    into layout.buildDirectory.dir('libs')
}

if (tasks.findByName('build') == null) {
    tasks.register('build') {
        loaderProjectsForCollect.each { sub -> dependsOn "${sub.path}:build" }
        finalizedBy 'collectJars'
    }
} else {
    tasks.named('build').configure { finalizedBy 'collectJars' }
}
